# events-manager-GUI

./: CMakeLists.txt  README.md  main.cpp
BUSINESS/: AdminService.cpp  AdminService.h  UserService.cpp  UserService.h
COMMAND_DESIGN_PATTERN/: AddCommand.cpp  AddCommand.h  CommandManager.cpp  CommandManager.h  ICommand.cpp  ICommand.h  RemoveCommand.cpp  RemoveCommand.h  UpdateCommand.cpp  UpdateCommand.h
DATA/: admin_events.csv  admin_events.html
DOMAIN/: Date.cpp  Date.h  Event.cpp  Event.h
EXCEPTIONS/: BaseException.cpp  BaseException.h  RepositoryException.cpp  RepositoryException.h  ValidationException.cpp  ValidationException.h
GUI/: AdminGUI.cpp  AdminGUI.h  ModeOptionsGUI.cpp  ModeOptionsGUI.h  PersistenceOptionsGUI.cpp  PersistenceOptionsGUI.h  UserGUI.cpp  UserGUI.h
MODEL_VIEW_DESIGN_PATTERN/: EventsTableModel.cpp  EventsTableModel.h
PERSISTENCE/: CSVFileRepository.cpp  CSVFileRepository.h  FileRepository.cpp  FileRepository.h  HTMLEventsRepository.cpp  HTMLEventsRepository.h  MemoryRepository.cpp  MemoryRepository.h  VirtualRepository.cpp  VirtualRepository.h
START/: StarterGUI.cpp  StarterGUI.h
VALIDATION/: Validator.cpp  Validator.h  VirtualValidator.cpp  VirtualValidator.h
